[tool.poetry]
name = "opensource"
version = "0.1.0"
description = ""
authors = ["Damian Krystkiewicz <damian.krystkiewicz@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6.1, <4.0"
isort = "^4.3.21"
black = "^19.10b0"
dataclasses = { version = "*", python = ">=3.6, <3.7" }
autoflake = "^1.3.1"
envo = {path = "./envo"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
